<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.peerpal.peerpalapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_peers"
        android:name="com.peerpal.peerpalapp.ui.peers.PeersFragment"
        android:label="@string/title_peers"
        tools:layout="@layout/fragment_peers" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.peerpal.peerpalapp.ui.messages.MessagesFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_messages" />
</navigation>