<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/peersCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:background="@drawable/card_border"
            android:backgroundTint="@color/my_tertiary"
            android:orientation="vertical"
            android:weightSum="5.5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_weight="1.5"
                android:background="@drawable/card_border"
                android:backgroundTint="@color/my_secondary"
                android:weightSum="2">

                <ImageView
                    android:id="@+id/peersImage"
                    android:layout_width="75dp"
                    android:layout_height="match_parent"
                    android:padding="15dp"
                    app:srcCompat="@drawable/icon_peers" />

                <TextView
                    android:id="@+id/peersName"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/user"
                    android:textColor="@color/my_primary"
                    android:textSize="20dp" />

                <Button
                    android:id="@+id/peersConnect"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/my_tertiary"
                    android:text="@string/connect"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <TextView
                android:id="@+id/peersDegree"
                android:layout_width="match_parent"
                android:layout_height="50px"
                android:layout_marginVertical="10dp"
                android:gravity="center_vertical"
                android:paddingHorizontal="10dp"
                android:text="@string/degreeStatement"
                android:textColor="@color/my_primary"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/peersHobbies"
                android:layout_width="match_parent"
                android:layout_height="50px"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:paddingHorizontal="10dp"
                android:text="@string/hobbies"
                android:textColor="@color/my_primary"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1.5"
                android:paddingHorizontal="10dp"
                android:text="Bio:"
                android:textColor="@color/my_primary" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>