<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_and_notices"
        android:textStyle="bold"
        android:textSize="36sp"
        android:padding="20dp"
        android:textColor="@color/Red"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardBackgroundColor="#92000e"
        app:cardCornerRadius="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/main_heading">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/security_notice_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/patch_notes_1_0"
                android:padding="10dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="26sp"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/security_notice_1_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_this_is_a_description_of_a_security_notice_please_click_on_this_tab_to_expand_the_notice_this_is_a_description_of_a_security_notice_please_click_on_this_tab_to_expand_the_notice_this_is_a_description_of_a_security_notice_please_click_on_this_tab_to_expand_the_notice_this_is_a_description_of_a_security_notice_please_click_on_this_tab_to_expand_the_notice"
                android:layout_below="@id/security_notice_1"
                android:textStyle="bold"
                android:textSize="13sp"
                android:textColor="@color/white"
                android:textAlignment="textStart"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:lineHeight="18dp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_marginTop="10dp"
        android:id="@+id/card_2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardBackgroundColor="#92000e"
        app:cardCornerRadius="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/card_1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/security_notice_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/security_notice"
                android:padding="10dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="26sp"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/security_notice_2_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_this_is_a_description_of_a_security_notice_please_click_on_this_tab_to_expand_the_notice_this_is_a_description_of_a_security_notice_please_click_on_this_tab_to_expand_the_notice_this_is_a_description_of_a_security_notice_please_click_on_this_tab_to_expand_the_notice_this_is_a_description_of_a_security_notice_please_click_on_this_tab_to_expand_the_notice"
                android:layout_below="@id/security_notice_2"
                android:textStyle="bold"
                android:textSize="13sp"
                android:textColor="@color/white"
                android:textAlignment="textStart"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:lineHeight="18dp"
                />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>