<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity"
    android:background="@color/Red">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_creation"
                android:textSize="30dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/Red"/>

            <EditText
                android:id="@+id/acc_Creation_First_Name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/red_border"
                android:hint="@string/first_name"
                android:padding="10dp"
                android:textColor="@color/black" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/acc_Creation_Last_Name"
                android:background="@drawable/red_border"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:hint="@string/last_name"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/acc_Creation_Email"
                android:background="@drawable/red_border"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:hint="Student Email...."
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/acc_Creation_Phone"
                android:background="@drawable/red_border"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:hint="Phone Number...."
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/acc_Creation_Password"
                android:background="@drawable/red_border"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:hint="Password"
                android:inputType="textPassword"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/acc_Creation_Cofirm_Password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/red_border"
                android:hint="Confirm Password...."
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/acc_Creation_signup_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:text="Create your account"
                android:textColor="@color/my_primary"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/acc_Creation_loginRedirect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:padding="10dp"
                android:text="Already a PeerPal user? Login"
                android:textColor="@color/Red"
                android:textSize="18dp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
